datahub: add null guards and improve error-catching in NessService class